[gd_scene format=3 uid="uid://dgaywwoiwkbeu"]

[ext_resource type="Script" uid="uid://b0vmqp1rjpt6n" path="res://scenes/game/songs/basic_song.gd" id="1_kkhjq"]
[ext_resource type="PackedScene" uid="uid://l713j3okh2iq" path="res://scenes/game/playstate.tscn" id="2_hvfki"]
[ext_resource type="Resource" uid="uid://dmw77m5oxkyig" path="res://assets/sprites/playstate/pixel/pixel_note_skin.tres" id="4_gvt2o"]
[ext_resource type="Resource" uid="uid://dsqgb7q6eq1mf" path="res://assets/sprites/playstate/pixel/pixel_ui_skin.tres" id="5_0s4pd"]
[ext_resource type="PackedScene" uid="uid://s0oblvodh51d" path="res://scenes/game/playstate_camera.tscn" id="6_vhuvi"]
[ext_resource type="PackedScene" uid="uid://cd3leoxyqnk4m" path="res://scenes/game/stages/weeb_school/weeb_school.tscn" id="7_mjcyn"]
[ext_resource type="PackedScene" uid="uid://dcuxa2yfg27xc" path="res://scenes/game/characters/boyfriend pixel.tscn" id="9_cvimb"]
[ext_resource type="PackedScene" uid="uid://c641vxfiu033w" path="res://scenes/game/characters/senpai.tscn" id="10_2o85c"]
[ext_resource type="PackedScene" uid="uid://blyod30lc1qk0" path="res://scenes/game/characters/girlfriend pixel.tscn" id="11_norpj"]
[ext_resource type="PackedScene" uid="uid://cigsmwajnw2jq" path="res://scenes/game/ui.tscn" id="12_q80n4"]

[node name="Senpai" type="Node2D" unique_id=739542381]
script = ExtResource("1_kkhjq")

[node name="PlayState Host" parent="." unique_id=102571385 node_paths=PackedStringArray("host", "ui", "camera", "rating_position", "combo_position") instance=ExtResource("2_hvfki")]
process_mode = 1
host = NodePath("..")
ui = NodePath("../UI")
camera = NodePath("../Camera")
rating_position = NodePath("../World/Rating Marker")
combo_position = NodePath("../World/Combo Marker")
note_skin = ExtResource("4_gvt2o")
ui_skin = ExtResource("5_0s4pd")

[node name="Camera" parent="." unique_id=187312878 instance=ExtResource("6_vhuvi")]
position = Vector2(139.7, 520.7)
position_smoothing_speed = 3.0

[node name="Stage" parent="." unique_id=900796771 instance=ExtResource("7_mjcyn")]
unique_name_in_owner = true

[node name="Player" parent="." unique_id=1935859516 groups=["player"] instance=ExtResource("9_cvimb")]
unique_name_in_owner = true
z_index = 300
position = Vector2(480, 880.00006)
scale = Vector2(6, 6)

[node name="Enemy" parent="." unique_id=182391035 groups=["enemy"] instance=ExtResource("10_2o85c")]
unique_name_in_owner = true
z_index = 200
position = Vector2(-160, 904.00006)
scale = Vector2(6, 6)

[node name="Metronome" parent="." unique_id=410590995 instance=ExtResource("11_norpj")]
unique_name_in_owner = true
z_index = 100
position = Vector2(144, 840)
scale = Vector2(6, 6)

[node name="World" type="CanvasLayer" parent="." unique_id=933170111]
layer = 10
follow_viewport_enabled = true

[node name="Position 1" type="Marker2D" parent="World" unique_id=1606143904 groups=["camera_positions"]]
unique_name_in_owner = true
position = Vector2(240, 568)
gizmo_extents = 18.3

[node name="Position 2" type="Marker2D" parent="World" unique_id=57743722 groups=["camera_positions"]]
unique_name_in_owner = true
position = Vector2(18.5, 520.7)
gizmo_extents = 26.5

[node name="Position 3" type="Marker2D" parent="World" unique_id=1165074306 groups=["camera_positions"]]
unique_name_in_owner = true
position = Vector2(139.7, 520.7)
gizmo_extents = 120.7

[node name="Rating Marker" type="Marker2D" parent="World" unique_id=300929271]
position = Vector2(284, 484)
gizmo_extents = 20.0

[node name="Combo Marker" type="Marker2D" parent="World" unique_id=1447442033]
position = Vector2(368, 528)
gizmo_extents = 20.0

[node name="UI" parent="." unique_id=1358688643 instance=ExtResource("12_q80n4")]
layer = 10

[connection signal="combo_break" from="PlayState Host" to="." method="_on_combo_break"]
[connection signal="create_note" from="PlayState Host" to="." method="_on_create_note"]
[connection signal="new_event" from="PlayState Host" to="." method="_on_new_event"]
